# jsonfmt

./: CMakeLists.txt
cmake/: FindCriterion.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  array.c  array.h  config.c  config.h  error.c  error.h
test/: CMakeLists.txt  config_test.c  criterion_hooks.c
